--- a/backend/package.json
+++ b/backend/package.json
@@ -1,29 +1,49 @@
 {
-  "name": "csv-reader",
-  "version": "1.0.0",
-  "description": "",
+  "name": "server",
+  "version": "0.0.0",
+  "private": true,
+  "bin": {
+    "server": "bin/wwww"
+  },
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "nodemon --exec ts-node src/index.ts",
+    "dev": "nodemon --exec ts-node src/app.ts",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/formidable": "^3.4.5",
-    "@types/node": "^20.12.11",
-    "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "lint": "tslint --project \"tsconfig.json\"",
+    "test": "jest",
+    "test:watch": "npm run test -- --watchAll",
+    "test:coverage": "npm run test -- --coverage"
   },
   "dependencies": {
+    "@prisma/client": "^5.14.0",
+    "@types/multer": "^1.4.11",
+    "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
-    "csv-parser": "^3.0.0",
-    "formidable": "^3.5.1",
-    "querystring": "^0.2.1",
-    "stream": "^0.0.2"
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.5-lts.1",
+    "pdf-extraction": "^1.0.2"
+  },
+  "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.17",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "4.17.8",
+    "@types/helmet": "^4.0.0",
+    "@types/jest": "^25.2.3",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^14.18.63",
+    "@types/supertest": "^2.0.9",
+    "concurrently": "^5.2.0",
+    "jest": "^26.0.1",
+    "nodemon": "^2.0.4",
+    "prisma": "^5.14.0",
+    "supertest": "^4.0.2",
+    "ts-node": "^10.9.2",
+    "tsc": "^1.20150623.0",
+    "tslint": "^6.1.2",
+    "typescript": "^5.4.5"
   }
 }
