--- a/backend/package.json
+++ b/backend/package.json
@@ -35,12 +35,13 @@
     "@types/jest": "^25.2.3",
     "@types/morgan": "^1.9.9",
     "@types/node": "^14.18.63",
-    "@types/supertest": "^2.0.9",
+    "@types/supertest": "^2.0.16",
     "concurrently": "^5.2.0",
-    "jest": "^26.0.1",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.4",
     "prisma": "^5.14.0",
     "supertest": "^4.0.2",
+    "ts-jest": "^29.1.3",
     "ts-node": "^10.9.2",
     "tsc": "^1.20150623.0",
     "tslint": "^6.1.2",
